[b][color=orange]v5.64[/color], 05.03.2023[/b][list]
[*]Wrath: Fixed a lua error on the Minimap[/list]