@@ -1,4 +1,7 @@
 ### Changes ###
 
-  * Wrath: Fixed a lua error on the Minimap
+  * IMPORTANT: Removed Armory Mode on Retail, it had some critical performance issues
+  * Added a Missing Stats Option under Misc to add all Stats to the Character Panel
+  * Updated Character Skin to match a bit the old armory look
+  * Updated Friendslist code
 
