@@ -1,2 +1,5 @@
-[b][color=orange]v5.64[/color], 05.03.2023[/b][list]
-[*]Wrath: Fixed a lua error on the Minimap[/list]
+[b][color=orange]v5.65[/color], 09.03.2023[/b][list]
+[*]IMPORTANT: Removed Armory Mode on Retail, it had some critical performance issues
+[*]Added a Missing Stats Option under Misc to add all Stats to the Character Panel.
+[*}Updated Character Skin to match a bit the old armory look
+[*]Updated Friendslist code[/list]
